# carsearch/src/main/java/com/cardb/carsearch/service/CarModelService.java
@@ -1,11 +1,11 @@
 package com.cardb.carsearch.service;
 
-import com.cardb.carsearch.api.data.ApiBodyType;
-import com.cardb.carsearch.api.data.ApiCarModel;
-import com.cardb.carsearch.api.data.ApiCreateCarModel;
+import com.cardb.carsearch.api.data.*;
 import com.cardb.carsearch.data.constants.BodyType;
 import com.cardb.carsearch.data.entity.Brand;
+import com.cardb.carsearch.data.entity.CarGeneration;
 import com.cardb.carsearch.data.entity.CarModel;
+import com.cardb.carsearch.data.repository.CarGenerationRepository;
 import com.cardb.carsearch.data.repository.CarModelRepository;
 import com.cardb.carsearch.specification.CarModelSpecifications;
 import jakarta.persistence.EntityNotFoundException;
@@ -20,10 +20,12 @@ import java.util.stream.Collectors;
 public class CarModelService {
 
     private final CarModelRepository carModelRepository;
+    private final CarGenerationRepository carGenerationRepository;
     private final BrandService brandService;
 
-    public CarModelService(CarModelRepository carModelRepository, BrandService brandService) {
+    public CarModelService(CarModelRepository carModelRepository, CarGenerationRepository carGenerationRepository, BrandService brandService) {
         this.carModelRepository = carModelRepository;
+        this.carGenerationRepository = carGenerationRepository;
         this.brandService = brandService;
     }
 
@@ -51,8 +53,12 @@ public class CarModelService {
     }
 
     public ApiCarModel getBySlug(String slug) {
-        CarModel carModel = carModelRepository.findBySlug(slug).orElseThrow(EntityNotFoundException::new);
+        CarModel carModel = getBySlugEntity(slug);
         return Utils.mapToApi(carModel);
+    }
+
+    private CarModel getBySlugEntity(String slug) {
+        return carModelRepository.findBySlug(slug).orElseThrow(EntityNotFoundException::new);
     }
 
     public ApiCarModel create(ApiCreateCarModel apiCreateCarModel) {
@@ -60,5 +66,29 @@ public class CarModelService {
         CarModel carModel = new CarModel(apiCreateCarModel.getName(), apiCreateCarModel.getSlug(), Utils.mapToEntity(apiCreateCarModel.getBodyType()), brand);
         carModelRepository.save(carModel);
         return Utils.mapToApi(carModel);
+    }
+
+    public ApiCarGeneration createCarGeneration(String slug, ApiCreateCarGeneration apiCreateCarGeneration) {
+        CarModel carModel = getBySlugEntity(slug);
+        CarGeneration carGeneration = new CarGeneration(
+                apiCreateCarGeneration.getName(),
+                carModel,
+                apiCreateCarGeneration.getProductionStartYear(),
+                apiCreateCarGeneration.getProductionEndYear(),
+                apiCreateCarGeneration.getTireSize(),
+                apiCreateCarGeneration.getLengthMm(),
+                apiCreateCarGeneration.getWidthMm(),
+                apiCreateCarGeneration.getHeightMm(),
+                apiCreateCarGeneration.getGroundClearanceMm(),
+                apiCreateCarGeneration.getCargoVolumeLitres()
+        );
+        return Utils.mapToApi(carGenerationRepository.save(carGeneration));
+    }
+
+    public List<ApiCarGeneration> getCarGenerations(String slug) {
+        CarModel carModel = getBySlugEntity(slug);
+        return carGenerationRepository.findAllByCarModel(carModel).stream()
+                .map(Utils::mapToApi)
+                .collect(Collectors.toList());
     }
 }
